--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -34,6 +34,14 @@
           Agent Distribution
         </a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link spinner-trigger" href="/inbound-number-provision">
+          <span data-feather="users" class="align-text-bottom"></span>
+          Inbound Number Provision
+        </a>
+      </li>
+
     </ul>
 
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
