--- a/views/inboundnumberprovision.html
+++ b/views/inboundnumberprovision.html
@@ -179,10 +179,10 @@
         alert("No Phone Number Selected");
         return;
       }
-      if (!selMappedCampaign.options.length) {
-        alert("No Campaign Added to Provision");
-        return;
-      }
+      // if (!selMappedCampaign.options.length) {
+      //   alert("No Campaign Added to Provision");
+      //   return;
+      // }
 
       show_loader();
 
