--- a/views/agentprovision.html
+++ b/views/agentprovision.html
@@ -42,7 +42,7 @@
             <% provisionedAgents.forEach(function(provisionedAgent){ %>
             <tr>
               <td>
-                <%=provisionedAgent.agentName%>
+                <%=provisionedAgent.Username%>
               </td>
             </tr>
             <% }); %>
