--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -1,4 +1,4 @@
-<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-lg-block bg-light sidebar collapse">
   <div class="position-sticky pt-3 sidebar-sticky">
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
       <span>Operations</span>
@@ -50,7 +50,6 @@
         <span data-feather="pie-chart" class="align-text-bottom"></span>
       </a>
     </h6>
-
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
         <a class="nav-link spinner-trigger" href="/campaign-dashboard">
@@ -65,21 +64,20 @@
         </a>
       </li>
     </ul>
-    <!--  
     <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted text-uppercase">
-      <span>Admin</span>
-      <a class="link-secondary" href="#">
-        <span data-feather="tool" class="align-text-bottom"></span>
+      <span>User</span>
+      <a class="link-secondary" href="#" aria-label="User">
+        <span data-feather="lock" class="align-text-bottom"></span>
       </a>
-    </h6> 
+    </h6>
     <ul class="nav flex-column mb-2">
       <li class="nav-item">
-        <a class="nav-link" href="#" onclick="javascrpt:alert('Under Development')">
-          <span data-feather="refresh-cw" class="align-text-bottom"></span>
-          Sync
+        <a class="nav-link spinner-trigger-none" href="javascript:void(0)">
+          <span data-feather="log-out" class="align-text-bottom"></span>
+          Sign Out
         </a>
       </li>
-    </ul>
-  -->
+    </ul> 
+    
   </div>
 </nav>
