--- a/views/inboundnumberprovision.html
+++ b/views/inboundnumberprovision.html
@@ -14,7 +14,7 @@
   </div>
   <%- include('_alert.html'); %>
   <div class="row g-3">
-    <div class="col-sm-5 col-md-5">
+    <div class="col-md-5">
       <label for="selPhoneNumber" class="mb-1">Phone Number</label>
       <input type="text" class="form-control mb-2" placeholder="Search Phone..." id="txtSearchPhone">
       <select size="10" name="selPhoneNumber" id="selPhoneNumber" class="form-select">
@@ -23,7 +23,7 @@
         <%});%>
       </select>
     </div>
-    <div class="col-md-3 mt-md-5">
+    <div class="col-md-3">
       <div class="row mt-md-5">
         <div class="col mt-md-5">
           <label for="selMappedCampaign" class="mb-1">Mapped Campaign</label>
@@ -32,7 +32,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-2 text-center">
+    <div class="col-md-1 text-center p-0 mt-md-4">
       <label for="" class="mt-md-5"></label>
       <div class="form-control py-4 mt-md-2 mb-sm-3" style="height: 76%;">
         <div class="btn-group-vertical btn-group-sm mt-md-4">
