--- a/views/_head.html
+++ b/views/_head.html
@@ -21,7 +21,7 @@
     <link href="/stylesheets/client.css" rel="stylesheet">
 </head>
 
-<body>
+<body onunload="hide_loader()">
     <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
         <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6 text-center" href="/">Connect Admin</a>
         <button class="navbar-toggler position-absolute d-lg-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
