dashboard-style and report-timerange fix

--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -37,7 +37,7 @@
 
       <li class="nav-item">
         <a class="nav-link spinner-trigger" href="/inbound-number-provision">
-          <span data-feather="users" class="align-text-bottom"></span>
+          <span data-feather="phone-incoming" class="align-text-bottom"></span>
           Inbound Number Provision
         </a>
       </li>
