--- a/views/_sidemenu.html
+++ b/views/_sidemenu.html
@@ -51,12 +51,12 @@
       </a>
     </h6>
     <ul class="nav flex-column mb-2">
-      <!-- <li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link spinner-trigger" href="/campaign-dashboard">
           <span data-feather="server" class="align-text-bottom"></span>
-          Wallboard
+          Campaign Dashboard
         </a>
-      </li> -->
+      </li>
       <li class="nav-item">
         <a class="nav-link spinner-trigger" href="/agent-wise-report">
           <span data-feather="book-open" class="align-text-bottom"></span>
