--- a/views/inboundnumberprovision.html
+++ b/views/inboundnumberprovision.html
@@ -1,59 +1,96 @@
 <%- include('_head.html'); %>
 
-  <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">
-      <%= title %>
-    </h1>
-    <% if (true) { %>
-    <div class="btn-toolbar mb-2 mb-md-0">
-      <div class="btn-group me-2">
-        <a href="/" class="btn btn-sm btn-outline-secondary spinner-trigger">Cancel</a>
-      </div>
-    </div>
-    <% } %>
-  </div>
-  <%- include('_alert.html'); %>
-  <div class="row g-3">
-    <div class="col-md-5">
-      <label for="selPhoneNumber" class="mb-1">Phone Number</label>
-      <input type="text" class="form-control mb-2" placeholder="Search Phone..." id="txtSearchPhone">
-      <select size="10" name="selPhoneNumber" id="selPhoneNumber" class="form-select">
-        <% phoneNumbers.forEach(function(phoneNumber){%>
-        <option value="<%=phoneNumber.Id%>"><%=phoneNumber.PhoneNumber%><%=String.fromCharCode(28);%>-&nbsp;<%=phoneNumber.PhoneNumberDesc%></option>
-        <%});%>
-      </select>
-    </div>
-    <div class="col-md-3">
-      <div class="row mt-md-5">
-        <div class="col mt-md-5">
-          <label for="selMappedCampaign" class="mb-1">Mapped Campaign</label>
-          <select size="2" name="selMappedCampaign" id="selMappedCampaign" class="form-select">
-          </select>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-1 text-center p-0 mt-md-4">
-      <label for="" class="mt-md-5"></label>
-      <div class="form-control py-4 mt-md-2 mb-sm-3" style="height: 76%;">
-        <div class="btn-group-vertical btn-group-sm mt-md-4">
-          <button type="button" class="btn btn-primary" id="btnAdd">&leftarrow; Add</button>
-          <button type="button" class="btn btn-danger" id="btnRem">&rightarrow; Rem</button>
-          <button type="button" class="btn btn-success" id="btnSave">&check; Save</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-3">
-      <label for="selAllCampaigns" class="mb-1">All Campaigns</label>
-      <input type="text" class="form-control mb-2" placeholder="Search Campaign..." id="txtSearchAllCampaign">
-      <select size="11" name="selAllCampaigns" id="selAllCampaigns" class="form-select">
-        <% campaigns.forEach(function(campaign){%>
-        <% if (campaign.campaignStatus) {%>
-        <option value="<%=campaign.campaignId%>"><%=campaign.campaignName%></option>
-        <%}%>
-        <%});%>
-      </select>
+<div
+  class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom"
+>
+  <h1 class="h2"><%= title %></h1>
+  <% if (true) { %>
+  <div class="btn-toolbar mb-2 mb-md-0">
+    <div class="btn-group me-2">
+      <a href="/" class="btn btn-sm btn-outline-secondary spinner-trigger"
+        >Cancel</a
+      >
     </div>
   </div>
+  <% } %>
+</div>
+<%- include('_alert.html'); %>
+<div class="row g-3">
+  <div class="col-md-5">
+    <label for="selPhoneNumber" class="mb-1">Phone Number</label>
+    <input
+      type="text"
+      class="form-control mb-2"
+      placeholder="Search Phone..."
+      id="txtSearchPhone"
+    />
+    <select
+      size="10"
+      name="selPhoneNumber"
+      id="selPhoneNumber"
+      class="form-select"
+    >
+      <% phoneNumbers.forEach(function(phoneNumber){%>
+      <option
+        value="<%=phoneNumber.PhoneNumber%><%=String.fromCharCode(28);%>-&nbsp;<%=phoneNumber.Id%>"
+      >
+        <%=phoneNumber.PhoneNumberDesc%>
+      </option>
+      <%});%>
+    </select>
+  </div>
+  <div class="col-md-3">
+    <div class="row mt-md-5">
+      <div class="col mt-md-5">
+        <label for="selMappedCampaign" class="mb-1">Mapped Campaign</label>
+        <select
+          size="2"
+          name="selMappedCampaign"
+          id="selMappedCampaign"
+          class="form-select"
+        ></select>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-1 text-center p-0 mt-md-4">
+    <label for="" class="mt-md-5"></label>
+    <div class="form-control py-4 mt-md-2 mb-sm-3" style="height: 76%">
+      <div class="btn-group-vertical btn-group-sm mt-md-4">
+        <button type="button" class="btn btn-primary" id="btnAdd">
+          &leftarrow; Add
+        </button>
+        <button type="button" class="btn btn-danger" id="btnRem">
+          &rightarrow; Rem
+        </button>
+        <button type="button" class="btn btn-success" id="btnSave">
+          &check; Save
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <label for="selAllCampaigns" class="mb-1">All Campaigns</label>
+    <input
+      type="text"
+      class="form-control mb-2"
+      placeholder="Search Campaign..."
+      id="txtSearchAllCampaign"
+    />
+    <select
+      size="11"
+      name="selAllCampaigns"
+      id="selAllCampaigns"
+      class="form-select"
+    >
+      <% campaigns.forEach(function(campaign){%> <% if (campaign.campaignStatus)
+      {%>
+      <option value="<%=campaign.campaignId%>">
+        <%=campaign.campaignName%>
+      </option>
+      <%}%> <%});%>
+    </select>
+  </div>
+</div>
 
 <script>
   function getMappedCampaignOfPhone(phoneNumber, phoneNumberCampaignMap) {
@@ -92,7 +129,7 @@
     for (let i = 0; i < l; i++) {
       if (typeof fromSel.options[i] != 'undefined' && toRemove.includes(fromSel.options[i].value)) {
         fromSel.remove(i);
-        i--; // after remove, the length will decrease by 1 
+        i--; // after remove, the length will decrease by 1
       }; // end if includes
     }; // next i
   }; // end function swapSelectedOptions
@@ -180,12 +217,13 @@
 
       let campaignIdVal = selMappedCampaign.options.length > 0 ? selMappedCampaign.options[0].value ?? "" : "";
       let campaignNameVal = selMappedCampaign.options.length > 0 ? selMappedCampaign.options[0].text ?? "" : "";
-      let phoneIdVal = selPhoneNumber.options[selPhoneNumber.selectedIndex].value;
-      let phoneNumberValWithDesc = selPhoneNumber.options[selPhoneNumber.selectedIndex].text;
-      let phoneNumberVal = phoneNumberValWithDesc.split(String.fromCharCode(28))[0];
-      phoneNumberVal = phoneNumberVal.trim();
+      let phoneIdVal = selPhoneNumber.options[selPhoneNumber.selectedIndex].value.split(String.fromCharCode(28))[1].trim();
+      let phoneNumberVal = selPhoneNumber.options[selPhoneNumber.selectedIndex].value.split(String.fromCharCode(28))[0].trim();
+      let tollFreeNumber = selPhoneNumber.options[selPhoneNumber.selectedIndex].text.split(String.fromCharCode(28))[0].trim();
+      let phoneNumerDesc = selPhoneNumber.options[selPhoneNumber.selectedIndex].text.split(String.fromCharCode(28))[1].trim();
+      // phoneNumberVal = phoneNumberVal.trim();
       show_loader();
-      let fetchUrl = `/inbound-number-provision/inbound-number-provision-save?campaignid=${campaignIdVal}&campaignname=${campaignNameVal}&phoneid=${phoneIdVal}&phoneNumber=${phoneNumberVal}`;
+      let fetchUrl = `/inbound-number-provision/inbound-number-provision-save?campaignid=${campaignIdVal}&campaignname=${campaignNameVal}&phoneid=${phoneIdVal}&phoneNumber=${phoneNumberVal}&phoneNumberDesc=${phoneNumerDesc}&tollFreeNumber=${tollFreeNumber}`;
       await fetch(fetchUrl);
       hide_loader();
       window.location.replace('/inbound-number-provision/inbound-number-provision-success');
