fixing - issue for phonenumberID

--- a/views/inboundnumberprovision.html
+++ b/views/inboundnumberprovision.html
@@ -32,7 +32,7 @@
     >
       <% phoneNumbers.forEach(function(phoneNumber){%>
       <option
-        value="<%=phoneNumber.PhoneNumber%><%=String.fromCharCode(28);%>-&nbsp;<%=phoneNumber.Id%>"
+        value="<%=phoneNumber.PhoneNumber%><%=String.fromCharCode(28);%>&nbsp;<%=phoneNumber.Id%>"
       >
         <%=phoneNumber.PhoneNumberDesc%>
       </option>
