--- a/views/_foot.html
+++ b/views/_foot.html
@@ -6,7 +6,7 @@
 <script src="/javascripts/simple-datatables.js"></script>
 <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 
- 
+
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/jszip-2.5.0/dt-1.13.1/b-2.3.3/b-html5-2.3.3/b-print-2.3.3/datatables.min.js"></script>
@@ -39,12 +39,22 @@
 
 
   $(document).ready(function() {
-    $('#reporting-table').DataTable({
-      dom:"Blfrtip",
-      buttons: [
-      'copy', 'csv', 'excel', 'pdf', 'print'
-      ]
-    });
+    // var table = $('#reporting-table').DataTable({
+    //   lengthChange: true,
+    //   dom: 'Bfltrip',
+    //   buttons: [
+    //     'csv', 'excel', 'pdf', 'print'
+    //   ]
+    // });
+    // table.buttons().container().appendTo('#reporting-table-wrapper .col-md-6:eq(0)');
+
+
+    $("#reporting-table").DataTable({
+      "responsive": true, "lengthChange": true, "autoWidth": false,lengthMenu: [25, 50, 100],
+      "buttons": ["csv", "excel", "pdf", "print"]
+    }).buttons().container().appendTo('#reporting-table-wrapper .col-md-6:eq(0)');
+
+
   });
 </script>
 </body>
